# Chip8Emulator

./: Cargo.toml  Pong (1 player).ch8:Zone.Identifier  index.html  index.js
chip8emulator/: Cargo.toml
chip8emulator/src/: lib.rs
desktop/: Cargo.toml
desktop/src/: main.rs
pkg/: chip8emu.d.ts  chip8emu.js  chip8emu_bg.wasm  chip8emu_bg.wasm.d.ts  package.json
src/: chip8emulator.rs  lib.rs  main.rs
web/: Cargo.toml
web/src/: lib.rs
