[package]
name = "chip8emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
getrandom = { version = "*", features = ["js"]}
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"

# for desktop
# sdl2 = "0.35.2"

[dependencies.web-sys]
version = "0.3.61"
features = [
    "Window",
    "Document",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "KeyboardEvent",
]
